Fix images and iframes overflowing in product descriptions

--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -50,7 +50,10 @@
 
       small
         +font-size(14)
-
+      
+      img, iframe
+        max-width: 100%
+        
       p
         margin-bottom: 16px
         padding: 0
